# CourseWork1

./: CMakeLists.txt  input.txt  main.c  menu.c  menu.h  output.txt  processign_text.c  processign_text.h  sentence.c  sentence.h  sort_sentence_product.c  text.c  text.h  unique_sentence_in_text.c  unique_sentence_in_text.h  update_format_date.c
include/: menu.h  processing_text.h  sort_sentence_product.h  text.h  update_format_date.h
src/: main.c  menu.c  processing_text.c  sort_sentence_product.c  text.c
